# Arrow-AI

./: Build-from-Source.md  COPYRIGHT  Home.md  LICENSE  Project-Data-Structure.md  Project-Organization.md  Quick-Start-Guide.md  Shortcuts.md  development.md  intro.arrow  readme.md
Arrow/: main.tscn  project.godot  readme.md
Arrow/nodes/condition/: console.gd
Arrow/nodes/content/: console.gd
Arrow/nodes/dialog/: console.gd
Arrow/nodes/entry/: console.gd
Arrow/nodes/frame/: console.gd
Arrow/nodes/generator/: console.gd
Arrow/nodes/hub/: console.gd
Arrow/nodes/interaction/: console.gd
Arrow/nodes/jump/: console.gd
Arrow/nodes/macro_use/: console.gd
Arrow/projects/: example1-home.arrow  example2-intro.arrow
Arrow/runtimes/: html-js.arrow-runtime
Arrow/scripts/: main.gd
Docs/: Project-Specification.md
Docs/Arrow.wiki/: CLI-Arguments.md  Characters.md  Navigation-and-Plot-Management.md  Variables-and-Logic.md
Nodes/: Content.md  Generator.md  Interaction.md  Marker.md  Monolog.md  Sequencer.md  Tag-Edit.md  Variable-Update.md
Server/: .gitignore  COPYRIGHT  arrow_agent_protocol.md  llm.py  main.py  manager.py  pyproject.toml  readme.md  test_websocket.py
Server/Arrow_AI_Backend/: main.py  manager.py  schemas.py  shared.py
Server/Arrow_AI_Backend/agent/: README.md  models.py  states.py
Server/Arrow_AI_Backend/agent/agents/: __init__.py  complexity_analyzer.py  decider.py  executor.py  planner.py  supervisor.py
Server/Arrow_AI_Backend/agent/tools/: arrow_tools.py
docs/: Project-Specification.md  project_specification.txt
(+47 files in other folders)
